force-app/main/default/objects/Seguimiento_de_acciones__c/Seguimiento_de_acciones__c.object-meta.xml
<CustomObject>
    <label>Follow Up Action</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Correlative</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>