force-app/main/default/objects/Seguimiento_de_acciones__c/fields/Area_Responsable__c.field-meta.xml
<CustomField>
    <fullName>Area_Responsable__c</fullName>
    <label>Área Responsable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abastecimiento</fullName>
            </value>
            <value>
                <fullName>Calidad</fullName>
            </value>
            <value>
                <fullName>Despacho</fullName>
            </value>
            <value>
                <fullName>Laboratorio</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Mantención</fullName>
            </value>
            <value>
                <fullName>Procesos</fullName>
            </value>
            <value>
                <fullName>Producción</fullName>
            </value>
            <value>
                <fullName>Producto terminado</fullName>
            </value>
            <value>
                <fullName>Proyecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>