force-app/main/default/objects/Seguimiento_de_acciones__c/fields/Caso_de_origen__c.field-meta.xml
<CustomField>
    <fullName>Caso_de_origen__c</fullName>
    <label>Origin Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tracking Actions</relationshipLabel>
    <relationshipName>Acciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>