force-app/main/default/objects/Seguimiento_de_acciones__c/fields/Descripcion_de_accion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_accion__c</fullName>
    <label>Descripción de acción</label>
    <type>TextArea</type>
</CustomField>