force-app/main/default/objects/Seguimiento_de_acciones__c/fields/Fecha_comprometida__c.field-meta.xml
<CustomField>
    <fullName>Fecha_comprometida__c</fullName>
    <label>Fecha comprometida</label>
    <type>Date</type>
</CustomField>