force-app/main/default/objects/Seguimiento_de_acciones__c/fields/Prioridad_del_Caso__c.field-meta.xml
<CustomField>
    <fullName>Prioridad_del_Caso__c</fullName>
    <formula>TEXT(Caso_de_origen__r.Priority)</formula>
    <label>Prioridad del Caso</label>
    <type>Text</type>
</CustomField>