force-app/main/default/objects/Seguimiento_de_acciones__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <label>Responsible</label>
    <length>100</length>
    <type>Text</type>
</CustomField>