force-app/main/default/objects/Seguimiento_de_acciones__c/fields/Segmento_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Segmento_Cliente__c</fullName>
    <formula>TEXT(Caso_de_origen__r.Account.Rating)</formula>
    <label>Segmento Cliente</label>
    <type>Text</type>
</CustomField>