force-app/main/default/objects/Seguimiento_de_acciones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cuenta__c</columns>
    <columns>Responsable__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Fecha_comprometida__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>